--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 	<body class="is-preload">
 	<!-- Wrapper -->
 		<div id="wrapper" class="divided">
-
 			<!-- One -->
 				<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 					<div class="content">
@@ -50,14 +49,17 @@
 			<!-- Three -->
 				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 					<div class="content">
-						<h2>Tempus adipiscing</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+						<h2>Memo Ease NotesApp</h2>
+						<p>notes_app_with_firebase_android_studio_2024</p>
+						<p>A simple Notes App that allows users to create and manage their notes.
+							To run the app on an android device, please intall app-debug.apk from the master branch.
+						</p>
 						<ul class="actions stacked">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="https://github.com/phyulwin/notes_app_with_firebase_android_studio_2024" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<div class="image">
-						<img src="images/spotlight02.jpg" alt="" />
+						<img src="https://github.com/phyulwin/notes_app_with_firebase_android_studio_2024/blob/master/app/src/App%20Screenshots/Screenshot_20240702_170313.png" alt="" />
 					</div>
 				</section>
 
