--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
 					<!-- Gallery -->
 						<div class="gallery style2 medium lightbox onscroll-fade-in">
 							<article>
-								<a href="images/gallery/fulls/01.jpg" class="image">
-									<img src="images/gallery/thumbs/01.jpg" alt="" />
+								<a href="https://github.com/phyulwin/WaffleHacks2022" class="image">
+									<img src="images/hackathon project screenshots/wafflehacks2022.png" alt="" />
 								</a>
 								<div class="caption">
-									<h3>Ipsum Dolor</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+									<h3>Waffle Hacks 2022 Campfire Study</h3>
+									<p>A tool that keeps users accountable for their work and makes peer assistance more accessible. Award Winner</p>
 									<ul class="actions fixed">
 										<li><span class="button small">Details</span></li>
 									</ul>
@@ -238,76 +238,6 @@
 
 			<!-- Six -->
 				<section class="wrapper style1 align-center">
-					<div class="inner">
-						<h2>Ipsum sed consequat</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
-						<div class="items style1 medium onscroll-fade-in">
-							<section>
-								<span class="icon style2 major fa-gem"></span>
-								<h3>Lorem</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-							</section>
-							<section>
-								<span class="icon solid style2 major fa-save"></span>
-								<h3>Ipsum</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-							</section>
-							<section>
-								<span class="icon solid style2 major fa-chart-bar"></span>
-								<h3>Dolor</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-							</section>
-							<section>
-								<span class="icon solid style2 major fa-wifi"></span>
-								<h3>Amet</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-							</section>
-							<section>
-								<span class="icon solid style2 major fa-cog"></span>
-								<h3>Magna</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-							</section>
-							<section>
-								<span class="icon style2 major fa-paper-plane"></span>
-								<h3>Tempus</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-							</section>
-							<section>
-								<span class="icon solid style2 major fa-desktop"></span>
-								<h3>Aliquam</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-							</section>
-							<section>
-								<span class="icon solid style2 major fa-sync-alt"></span>
-								<h3>Elit</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-							</section>
-							<section>
-								<span class="icon solid style2 major fa-hashtag"></span>
-								<h3>Morbi</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-							</section>
-							<section>
-								<span class="icon solid style2 major fa-bolt"></span>
-								<h3>Turpis</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-							</section>
-							<section>
-								<span class="icon solid style2 major fa-envelope"></span>
-								<h3>Ultrices</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-							</section>
-							<section>
-								<span class="icon solid style2 major fa-leaf"></span>
-								<h3>Risus</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-							</section>
-						</div>
-					</div>
-				</section>
-
-			<!-- Seven -->
-				<section class="wrapper style1 align-center">
 					<div class="inner medium">
 						<h2>Get in touch</h2>
 						<form method="post" action="#">
@@ -343,7 +273,7 @@
 							<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
-						<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+<!--						<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>-->
 					</div>
 				</footer>
 
