--- a/index.html
+++ b/index.html
@@ -100,140 +100,72 @@
 									</ul>
 								</div>
 							</article>
+
 							<article>
-								<a href="images/gallery/fulls/02.jpg" class="image">
-									<img src="images/gallery/thumbs/02.jpg" alt="" />
+								<a href="https://github.com/phyulwin/STEMist-Hacks-2022" class="image">
+									<img src="images/hackathon project screenshots/galactichacks.jpg" alt="" />
 								</a>
 								<div class="caption">
-									<h3>Feugiat Lorem</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+									<h3>STEMist Hacks 2022 Galactic Origins</h3>
+									<p>A web application for users to ask an astronomy-related question and get answer using the APIs we connected it to, with an option to view a picture of space from NASA API which refreshes daily.</p>
 									<ul class="actions fixed">
 										<li><span class="button small">Details</span></li>
 									</ul>
 								</div>
 							</article>
+
 							<article>
-								<a href="images/gallery/fulls/03.jpg" class="image">
-									<img src="images/gallery/thumbs/03.jpg" alt="" />
+								<a href="https://github.com/phyulwin/Devpost-Funathon2022" class="image">
+									<img src="images/hackathon project screenshots/project_recyclable.png" alt="" />
 								</a>
 								<div class="caption">
-									<h3>Magna Amet</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+									<h3>Devpost Funathon 2022 Project Recyclable</h3>
+									<p>A project that aims to help people recycle their waste by detecting objects in a web camera image and giving information about how to recycle it. Developed using Python with Flask framework, OpenCV for web camera function, and APIs discovered at RapidAPI.</p>
 									<ul class="actions fixed">
 										<li><span class="button small">Details</span></li>
 									</ul>
 								</div>
 							</article>
+
 							<article>
-								<a href="images/gallery/fulls/04.jpg" class="image">
-									<img src="images/gallery/thumbs/04.jpg" alt="" />
+								<a href="https://github.com/phyulwin/Coastal-Hacks-2022-Project-_-Surf-Joy" class="image">
+									<img src="images/hackathon project screenshots/surf_joy.jpg" alt="" />
 								</a>
 								<div class="caption">
-									<h3>Sed Tempus</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+									<h3>Coastal Hacks 2022 Surf Joy (Real Time Wave Forecast)</h3>
+									<p>Surf Joy link is a real time wave forecast for surfers to check wave level at their local beaches. The wave heights above sea level are updated for every hour interval.</p>
 									<ul class="actions fixed">
 										<li><span class="button small">Details</span></li>
 									</ul>
 								</div>
 							</article>
+
 							<article>
-								<a href="images/gallery/fulls/05.jpg" class="image">
-									<img src="images/gallery/thumbs/05.jpg" alt="" />
+								<a href="https://github.com/phyulwin/HackBytesII-2023" class="image">
+									<img src="images/hackathon project screenshots/physics_equation.png" alt="" />
 								</a>
 								<div class="caption">
-									<h3>Ultrices Magna</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+									<h3>HackBytes II Physics Equation Blackboard</h3>
+									<p>A website designed for calculating variables in physics formulas, covering topics such as mechanics, electricity, and magnetism.</p>
 									<ul class="actions fixed">
 										<li><span class="button small">Details</span></li>
 									</ul>
 								</div>
 							</article>
+
 							<article>
-								<a href="images/gallery/fulls/06.jpg" class="image">
-									<img src="images/gallery/thumbs/06.jpg" alt="" />
+								<a href="https://github.com/David-DaNa/Stemist-Hacks-2023-UniBridge" class="image">
+									<img src="images/hackathon project screenshots/unibridge.png" alt="" />
 								</a>
 								<div class="caption">
-									<h3>Sed Tempus</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-									<ul class="actions fixed">
-										<li><span class="button small">Details</span></li>
-									</ul>
-								</div>
-							</article>
-							<article>
-								<a href="images/gallery/fulls/07.jpg" class="image">
-									<img src="images/gallery/thumbs/07.jpg" alt="" />
-								</a>
-								<div class="caption">
-									<h3>Ipsum Lorem</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-									<ul class="actions fixed">
-										<li><span class="button small">Details</span></li>
-									</ul>
-								</div>
-							</article>
-							<article>
-								<a href="images/gallery/fulls/08.jpg" class="image">
-									<img src="images/gallery/thumbs/08.jpg" alt="" />
-								</a>
-								<div class="caption">
-									<h3>Magna Risus</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-									<ul class="actions fixed">
-										<li><span class="button small">Details</span></li>
-									</ul>
-								</div>
-							</article>
-							<article>
-								<a href="images/gallery/fulls/09.jpg" class="image">
-									<img src="images/gallery/thumbs/09.jpg" alt="" />
-								</a>
-								<div class="caption">
-									<h3>Tempus Dolor</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-									<ul class="actions fixed">
-										<li><span class="button small">Details</span></li>
-									</ul>
-								</div>
-							</article>
-							<article>
-								<a href="images/gallery/fulls/10.jpg" class="image">
-									<img src="images/gallery/thumbs/10.jpg" alt="" />
-								</a>
-								<div class="caption">
-									<h3>Sed Etiam</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-									<ul class="actions fixed">
-										<li><span class="button small">Details</span></li>
-									</ul>
-								</div>
-							</article>
-							<article>
-								<a href="images/gallery/fulls/11.jpg" class="image">
-									<img src="images/gallery/thumbs/11.jpg" alt="" />
-								</a>
-								<div class="caption">
-									<h3>Magna Lorem</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-									<ul class="actions fixed">
-										<li><span class="button small">Details</span></li>
-									</ul>
-								</div>
-							</article>
-							<article>
-								<a href="images/gallery/fulls/12.jpg" class="image">
-									<img src="images/gallery/thumbs/12.jpg" alt="" />
-								</a>
-								<div class="caption">
-									<h3>Ipsum Dolor</h3>
-									<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+									<h3>STEMist Hacks II UniBridge</h3>
+									<p>A platform where all students can come together to share each other's stories to guide others, super user-friendly and easy-to-access tools and resources all in one place, and more importantly direct students and connect them with what they need to get to their goals.</p>
 									<ul class="actions fixed">
 										<li><span class="button small">Details</span></li>
 									</ul>
 								</div>
 							</article>
 						</div>
-
 				</section>
 
 			<!-- Six -->
