--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 								</a>
 								<div class="caption">
 									<h3>Devpost Funathon 2022 Project Recyclable</h3>
-									<p>A project that aims to help people recycle their waste by detecting objects in a web camera image and giving information about how to recycle it. Developed using Python with Flask framework, OpenCV for web camera function, and APIs discovered at RapidAPI.</p>
+									<p>A project that aims to help people recycle their waste by detecting objects in a web camera image and giving information about how to recycle it.</p>
 									<ul class="actions fixed">
 										<li><span class="button small">Details</span></li>
 									</ul>
@@ -133,7 +133,7 @@
 								</a>
 								<div class="caption">
 									<h3>Coastal Hacks 2022 Surf Joy (Real Time Wave Forecast)</h3>
-									<p>Surf Joy link is a real time wave forecast for surfers to check wave level at their local beaches. The wave heights above sea level are updated for every hour interval.</p>
+									<p>Surf Joy link is a real time wave forecast for surfers to check wave level at their local beaches.</p>
 									<ul class="actions fixed">
 										<li><span class="button small">Details</span></li>
 									</ul>
@@ -169,31 +169,6 @@
 				</section>
 
 			<!-- Six -->
-				<section class="wrapper style1 align-center">
-					<div class="inner medium">
-						<h2>Get in touch</h2>
-						<form method="post" action="#">
-							<div class="fields">
-								<div class="field half">
-									<label for="name">Name</label>
-									<input type="text" name="name" id="name" value="" />
-								</div>
-								<div class="field half">
-									<label for="email">Email</label>
-									<input type="email" name="email" id="email" value="" />
-								</div>
-								<div class="field">
-									<label for="message">Message</label>
-									<textarea name="message" id="message" rows="6"></textarea>
-								</div>
-							</div>
-							<ul class="actions special">
-								<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
-							</ul>
-						</form>
-
-					</div>
-				</section>
 
 			<!-- Footer -->
 				<footer class="wrapper style1 align-center">
