--- a/index.html
+++ b/index.html
@@ -49,39 +49,98 @@
           <div class="section-title">Projects</div>
       </div>
 
-      <div class="section-header">
-        <div class="section-title">Hackathon Projects</div>
+<div class="section-header">
+<div class="section-title">Hackathon Projects</div>
 
-            <div class="horizontal-container">
-                <div class="hackathon-project">
-                    <img src="assets/hackathon project screenshots/wafflehacks2022.png">
-                    <div class="hackathon-project-text">
-                        <b>Waffle Hacks 2022 Campfire Study</b>
-                        <p>A tool that keeps users accountable for their work and makes peer assistance more accessible. Award Winner</p>
-                    </div>
-                </div>
-                <div class="hackathon-project">
-                    <img src="assets/hackathon project screenshots/wafflehacks2022.png">
-                    <div class="hackathon-project-text">
-                        <b>Waffle Hacks 2022 Campfire Study</b>
-                        <p>A tool that keeps users accountable for their work and makes peer assistance more accessible. Award Winner</p>
-                    </div>
-                </div>
-                <!-- Add more hackathon-project divs as needed -->
-            </div>
-        </div> <!-- End of Hackathon Projects section -->
+<div class="horizontal-container">
 
-      <div class="section-header">
-          <div class="section-title">Tools & Technologies</div>
-         
-          <div class="section-content">
-              <img src="assets/techstackicons.png" style="width: 50%;">
-          </div>
-      </div>
+    <div class="hackathon-project">
+        <img src="assets/hackathon project screenshots/wafflehacks2022.png">
+        <div class="hackathon-project-text">
+            <b>Waffle Hacks 2022 Campfire Study</b>
+            <button class="btn" onclick="window.location.href='https://github.com/phyulwin/WaffleHacks2022'">Details</button>
+        </div>
+    </div>
 
-      <div class="section-header">
-          <div class="section-title">Certifications</div>
-      </div>
+    <div class="hackathon-project">
+        <img src="assets/hackathon project screenshots/galactichacks.jpg">
+        <div class="hackathon-project-text">
+            <b>STEMist Hacks 2022 Galactic Origins</b>
+            <button class="btn" onclick="window.location.href='https://github.com/phyulwin/STEMist-Hacks-2022'">Details</button>
+        </div>
+    </div>
+
+    <div class="hackathon-project">
+        <img src="assets/hackathon project screenshots/project_recyclable.png">
+        <div class="hackathon-project-text">
+            <b>Devpost Funathon 2022 Project Recyclable</b>
+            <button class="btn" onclick="window.location.href='https://github.com/phyulwin/Devpost-Funathon2022'">Details</button>
+        </div>
+    </div>
+
+    <div class="hackathon-project">
+        <img src="assets/hackathon project screenshots/surf_joy.jpg">
+        <div class="hackathon-project-text">
+            <b>Coastal Hacks 2022 Surf Joy (Real Time Wave Forecast)</b>
+            <button class="btn" onclick="window.location.href='https://github.com/phyulwin/Coastal-Hacks-2022-Project-_-Surf-Joy'">Details</button>
+        </div>
+    </div>
+
+    <div class="hackathon-project">
+        <img src="assets/hackathon project screenshots/physics_equation.png">
+        <div class="hackathon-project-text">
+            <b>HackBytes II Physics Equation Blackboard</b>
+            <button class="btn" onclick="window.location.href='https://github.com/phyulwin/HackBytesII-2023'">Details</button>
+        </div>
+    </div>
+
+    <div class="hackathon-project">
+        <img src="assets/hackathon project screenshots/unibridge.png">
+        <div class="hackathon-project-text">
+            <b>STEMist Hacks II UniBridge</b>
+            <button class="btn" onclick="window.location.href='https://github.com/David-DaNa/Stemist-Hacks-2023-UniBridge'">Details</button>
+        </div>
+    </div>
+
+</div>
+</div> <!-- End of Hackathon Projects section -->
+
+<div class="section-header">
+<div class="section-title">Tools & Technologies</div>
+
+    <div class="section-content">
+        <img src="assets/techstackicons.png" style="width: 40%; height: 40%; display: block; margin-left: auto; margin-right: auto;">
+    </div>
+</div>
+
+<div class="section-header">
+<div class="section-title">Certifications</div>
+
+    <div class="horizontal-container">
+
+        <div class="certification-item">
+        <img src="assets/coursera certificates/Coursera 323PTZGQ3B97-1.png">
+        </div>
+
+        <div class="certification-item">
+        <img src="assets/coursera certificates/Coursera CZHMT3ZU88T5-1.png">
+        </div>
+
+        <div class="certification-item">
+        <img src="assets/coursera certificates/Coursera EYHDB46WFL3E-1.png">
+        </div>
+
+        <div class="certification-item">
+        <img src="assets/coursera certificates/Coursera QDNPJ4NHUGV7-1.png">
+        </div>
+
+        <div class="certification-item">
+        <img src="assets/coursera certificates/Coursera VXX43C29PDBW-1.png">
+        </div>
+
+    </div>
+
+</div>
       
     </div>
 </body>
